fix cramped lines of toast

--- a/frontend/packages/kitconcept-intranet/src/theme/components/returnToOriginToast.scss
+++ b/frontend/packages/kitconcept-intranet/src/theme/components/returnToOriginToast.scss
@@ -1,5 +1,8 @@
 .Toastify__toast.Toastify__toast--info.return-to-origin-toast
-  .return.toast-box {
+  .toast-box-center {
+  padding-top: 20px;
+}
+.return.toast-box {
   border: none;
   background: none;
   cursor: pointer;
